--- a/projetNoSQL/package.json
+++ b/projetNoSQL/package.json
@@ -10,6 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon"
   },
+  "scripts": {
+  "start": "npx nodemon app.js"
+},
   "dependencies": {
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
